--- a/draw.html
+++ b/draw.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vẽ và Nhận diện Chữ viết tay</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js"></script>
     <style>
         body {
             display: flex;
@@ -13,6 +14,12 @@
             background-color: #f0f0f0;
             margin: 0;
             padding: 20px;
+        }
+        .container {
+            display: flex;
+            flex-direction: row;
+            gap: 20px;
+            align-items: flex-start;
         }
         canvas {
             border: 2px solid #333;
@@ -42,15 +49,39 @@
             font-weight: bold;
             margin-top: 10px;
         }
+        #probabilities {
+            margin-top: 10px;
+            font-size: 16px;
+        }
+        #networkCanvas {
+            border: 4px solid rgb(255, 255, 255);
+        }
+        .network-section {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .network-section h2 {
+            margin-bottom: 10px;
+            font-size: 20px;
+        }
     </style>
 </head>
 <body>
     <h1>Vẽ và Nhận diện Chữ viết tay</h1>
-    <div class="controls">
-        <button id="clearBtn">Xóa bản vẽ</button>
+    <div class="container">
+        <div>
+            <div class="controls">
+                <button id="clearBtn">Xóa bản vẽ</button>
+            </div>
+            <canvas id="canvas" width="28" height="28" style="width: 280px; height: 280px;"></canvas>
+            <div id="prediction">Dự đoán: -</div>
+        </div>
+        <div class="network-section">
+            <h2>Neural Network Visualization</h2>
+            <div id="networkCanvas"></div>
+        </div>
     </div>
-    <canvas id="canvas" width="28" height="28" style="width: 560px; height: 560px;"></canvas>
-    <div id="prediction">Dự đoán: -</div>
 
     <script>
         const canvas = document.getElementById('canvas');
@@ -66,6 +97,7 @@
         const defaultColor = '#000000'; // Màu đen mặc định
         let lastPredictionTime = 0;
         const predictionDelay = 100; // 100ms delay
+        let probabilities = Array(10).fill(0);
 
         // Hàm vẽ với hiệu ứng làm mờ
         function drawPixel(x, y, color) {
@@ -105,23 +137,18 @@
             return { r, g, b };
         }
 
-        // Lấy dữ liệu từ canvas và gửi đến API
         async function predict() {
-            // Lấy dữ liệu ảnh từ canvas
             const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
             const data = imageData.data;
-
-            // Chuyển đổi sang grayscale
             const grayscale = new Float32Array(28 * 28);
             for (let i = 0; i < data.length; i += 4) {
                 const r = data[i];
                 const g = data[i + 1];
                 const b = data[i + 2];
-                const gray = 0.299 * r + 0.587 * g + 0.114 * b; // Công thức grayscale
-                grayscale[i / 4] = (255 - gray) / 255; // Chuẩn hóa về [0, 1]
+                const gray = 0.299 * r + 0.587 * g + 0.114 * b;
+                grayscale[i / 4] = gray / 255;
             }
-            console.log("Sending image data:", grayscale);
-            // Gửi dữ liệu đến API FastAPI
+
             try {
                 const response = await fetch('http://localhost:8000/predict', {
                     method: 'POST',
@@ -130,12 +157,21 @@
                     },
                     body: JSON.stringify({ image: Array.from(grayscale) })
                 });
+                if (!response.ok) {
+                    throw new Error(`HTTP error! Status: ${response.status}`);
+                }
                 const result = await response.json();
                 predictionDiv.textContent = `Dự đoán: ${result.digit}`;
-            } 
-            catch (error) {
+                if (result.probabilities) {
+                    probabilities = result.probabilities;
+                    const probs = result.probabilities.map((p, i) => `${i}: ${(p * 100).toFixed(2)}%`).join(', ');
+                    // probabilitiesDiv.textContent = `Xác suất: ${probs}`;
+                    drawNetwork();
+                }
+            } catch (error) {
                 console.error('Lỗi khi dự đoán:', error);
-                predictionDiv.textContent = 'Lỗi: Không thể dự đoán';
+                predictionDiv.textContent = `Lỗi: ${error.message}`;
+                probabilitiesDiv.textContent = '';
             }
         }
 
@@ -188,11 +224,140 @@
             ctx.fillStyle = 'white';
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             predictionDiv.textContent = 'Dự đoán: -';
+            probabilities = Array(10).fill(0);
+            drawNetwork();
         });
 
         // Khởi tạo canvas trắng
         ctx.fillStyle = 'white';
         ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+        // Trực quan hóa mạng neural
+        let weights = { W1: [], W2: [] };
+        async function loadWeights() {
+            try {
+                const response = await fetch('http://localhost:8000/weights');
+                weights = await response.json();
+            } catch (error) {
+                console.error('Lỗi khi tải trọng số:', error);
+            }
+        }
+
+        function setup() {
+            let canvas = createCanvas(600, 400);
+            canvas.parent('networkCanvas');
+            loadWeights().then(drawNetwork);
+        }
+
+        function drawNetwork() {
+            background(255);
+
+            // Số lượng nơ-ron hiển thị
+            const inputNodes = 10;
+            const hiddenNodes = 6;
+            const outputNodes = 10;
+
+            // Tọa độ và khoảng cách
+            const nodeRadius = 10;
+            const totalWidth = width - 100; // Chừa margin 50px ở mỗi bên
+            const layerSpacing = totalWidth / 3;
+            const centerX = width / 2;
+            const inputX = centerX - layerSpacing; // Căn giữa
+            const hiddenX = centerX; // Căn giữa
+            const outputX = centerX + layerSpacing; // Căn giữa
+
+            // Tính khoảng cách dọc đều nhau
+            const verticalMargin = 50;
+            const inputSpacing = (height - 2 * verticalMargin) / (inputNodes - 1);
+            const hiddenSpacing = (height - 2 * verticalMargin) / (hiddenNodes - 1);
+            const outputSpacing = (height - 2 * verticalMargin) / (outputNodes - 1);
+
+            // Vẽ các liên kết giữa Input và Hidden
+            for (let i = 0; i < inputNodes; i++) {
+                let y1 = verticalMargin + i * inputSpacing;
+                for (let j = 0; j < hiddenNodes; j++) {
+                    let y2 = verticalMargin + j * hiddenSpacing;
+                    let weight = weights.W1[i][j];
+                    strokeWeight(map(Math.abs(weight), 0, 1, 0.5, 3));
+                    if (weight > 0) {
+                        stroke(0, 0, 255, map(weight, 0, 1, 50, 255));
+                    } else {
+                        stroke(255, 0, 0, map(Math.abs(weight), 0, 1, 50, 255));
+                    }
+                    line(inputX, y1, hiddenX, y2);
+                }
+            }
+
+            // Vẽ các liên kết giữa Hidden và Output
+            for (let j = 0; j < hiddenNodes; j++) {
+                let y1 = verticalMargin + j * hiddenSpacing;
+                for (let k = 0; k < outputNodes; k++) {
+                    let y2 = verticalMargin + k * outputSpacing;
+                    let weight = weights.W2[j][k];
+                    strokeWeight(map(Math.abs(weight), 0, 1, 0.5, 3));
+                    if (weight > 0) {
+                        stroke(0, 0, 255, map(weight, 0, 1, 50, 255));
+                    } else {
+                        stroke(255, 0, 0, map(Math.abs(weight), 0, 1, 50, 255));
+                    }
+                    line(hiddenX, y1, outputX, y2);
+                }
+            }
+
+            // Vẽ các nơ-ron
+            stroke(0);
+            strokeWeight(1);
+
+            // Input layer
+            for (let i = 0; i < inputNodes; i++) {
+                let y = verticalMargin + i * inputSpacing;
+                fill(200);
+                ellipse(inputX, y, nodeRadius * 2);
+                if (i === 4) {
+                    textAlign(CENTER);
+                    textSize(16);
+                    fill(0);
+                    text("...", inputX, y + 20);
+                }
+            }
+
+            // Hidden layer
+            for (let j = 0; j < hiddenNodes; j++) {
+                let y = verticalMargin + j * hiddenSpacing;
+                fill(200);
+                ellipse(hiddenX, y, nodeRadius * 2);
+                if (j === 2) {
+                    textAlign(CENTER);
+                    textSize(16);
+                    fill(0);
+                    text("...", hiddenX, y + 20);
+                }
+            }
+
+            // Output layer
+            for (let k = 0; k < outputNodes; k++) {
+                let y = verticalMargin + k * outputSpacing;
+                if (probabilities[k] > 0) {
+                    let brightness = map(probabilities[k], 0, 1, 50, 255);
+                    fill(255, 255, 0, brightness);
+                } else {
+                    fill(200);
+                }
+                ellipse(outputX, y, nodeRadius * 2);
+                textAlign(CENTER);
+                textSize(12);
+                fill(0);
+                text(k, outputX, y + 5);
+            }
+
+            // Nhãn các tầng
+            textSize(16);
+            fill(0);
+            textAlign(CENTER);
+            text("Input Layer", inputX, verticalMargin - 20);
+            text("Hidden Layer", hiddenX, verticalMargin - 20);
+            text("Output Layer", outputX, verticalMargin - 20);
+        }
     </script>
 </body>
 </html>
